FIX: clipped hill

--- a/src/App.css
+++ b/src/App.css
@@ -177,7 +177,7 @@ a:hover {
 
 .bg-hill-light-green {
   position: absolute;
-  height: 60%;
+  height: 75%;
   width: 100vw;
   left: 0;
   bottom: 0;
